--- a/habitTrackerApp/templates/habitTrackerApp/base.html
+++ b/habitTrackerApp/templates/habitTrackerApp/base.html
@@ -6,10 +6,53 @@
 </head>
 <body>
     <h1>Habit Tracker</h1>
-    <a href="{% url 'habit_list' %}">Habits</a>
-    <a href="{% url 'target_list' %}">Targets</a>
-    <a href="{% url 'habit_log_list' %}">Habit Log</a>
-    
+
+    {% if user.is_authenticated %}
+        <ul>
+            <li>
+                <a href="">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'habit_list' %}" class="{% if request.resolver_match.url_name == 'habit_list' or request.resolver_match.url_name == 'habit_create' or request.resolver_match.url_name == 'habit_update' %}active{% endif %}">
+                    Habits
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'target_list' %}" class="{% if request.resolver_match.url_name == 'target_list' or request.resolver_match.url_name == 'target_create' or request.resolver_match.url_name == 'target_update' %}active{% endif %}">
+                    Targets
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'habit_log_list' %}" class="{% if request.resolver_match.url_name == 'habit_log_list' or request.resolver_match.url_name == 'habit_log_create' or request.resolver_match.url_name == 'habit_log_update' %}active{% endif %}">
+                    Habit Log
+                </a>
+            </li>
+            <li style="float:right">
+                <a href="{% url 'logout' %}">
+                    Logout
+                </a>
+            </li>
+            <li style="float:right">
+                <a href="#">
+                    {{ user.username }}
+                </a>
+            </li>
+        </ul>
+
+    {% else %}
+        <ul>
+            <li>
+                <a href="{% url 'login' %}" class="{% if request.resolver_match.url_name == 'login' %}active{% endif %}">Login</a>   
+            </li>
+            <li>
+                <a href="{% url 'signup' %}" class="{% if request.resolver_match.url_name == 'signup' %}active{% endif %}">Sign up</a>
+            </li>
+        </ul> 
+
+    {% endif %}
+
     {% for message in messages %}
     <div class="message {{ message.tags }}">
         {{ message }}
@@ -30,6 +73,59 @@
             background-color: #dff0d8;
             color: #3c763d;
         }
+
+        table {
+        border-collapse: collapse;
+        width: 100%;
+        }
+
+        table td, table th {
+        border: 1px solid #ddd;
+        padding: 8px;
+        }
+
+        table tr:nth-child(even){background-color: #f2f2f2;}
+
+        table tr:hover {background-color: #ddd;}
+
+        table th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: #04AA6D;
+        color: white;
+        }
+
+        ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        border: 1px solid #e7e7e7;
+        background-color: #f3f3f3;
+        }
+
+        li {
+        float: left;
+        }
+
+        li a {
+        display: block;
+        color: #666;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        }
+
+        li a:hover:not(.active) {
+        background-color: #ddd;
+        }
+
+        li a.active {
+        color: white;
+        background-color: #04AA6D;
+        }        
+        
     </style>
 </body>
 </html>
