--- a/habitTrackerApp/templates/habitTrackerApp/login.html
+++ b/habitTrackerApp/templates/habitTrackerApp/login.html
@@ -1,10 +1,17 @@
 {% extends "habitTrackerApp/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="h3 mb-2 text-gray-800">Login</h1>
+    </div>
+    <div class="card-body">
+        <form method="post">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
