--- a/habitTrackerApp/templates/habitTrackerApp/target_list.html
+++ b/habitTrackerApp/templates/habitTrackerApp/target_list.html
@@ -1,38 +1,46 @@
 {% extends "habitTrackerApp/base.html" %}
+{% load static %}
 
 {% block content %}
-    <h1>Targets</h1>
-    <a href="{% url 'target_create' %}">Create New Target</a>
-
-    <table >
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Target Habit</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Target Quantity</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for target in object_list %}
-                <tr>
-                    <td>{{ target.title}}</td>
-                    <td>{{ target.habit.name }}</td>
-                    <td>{{ target.start_date | date:"Y-m-d" }}</td>
-                    <td>{{ target.end_date | date:"Y-m-d" }}</td>
-                    <td>{{ target.quantity }}</td>
-                    <td>
-                        <a href="{% url 'target_update' target.pk %}">Edit</a> |
-                    </td>
-                </tr>
-            {% empty %}
-                <tr>
-                    <td colspan="6">No record available.</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<h1 class="h3 mb-2 text-gray-800">Targets</h1>
     
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <a href="{% url 'target_create' %}" class="btn btn-primary">Create New Target</a>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Target Habit</th>
+                        <th>Start Date</th>
+                        <th>End Date</th>
+                        <th>Target Quantity</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for target in object_list %}
+                        <tr>
+                            <td>{{ target.title}}</td>
+                            <td>{{ target.habit.name }}</td>
+                            <td>{{ target.start_date | date:"Y-m-d" }}</td>
+                            <td>{{ target.end_date | date:"Y-m-d" }}</td>
+                            <td>{{ target.quantity }}</td>
+                            <td>
+                                <a href="{% url 'target_update' target.pk %}" class="btn btn-primary">Edit</a>
+                            </td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="6">No record available.</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>       
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
